// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#006789"
    barStyle="dark-content"
    showHideTransition="fade"
  />
  <Header
    right={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="MissionHub"
      />
    }
    shadow={true}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      }
    }
    title="0 New Comments"
    titleStyle={
      Object {
        "color": undefined,
        "fontWeight": "400",
      }
    }
  />
  <SafeAreaView
    style={
      Object {
        "backgroundColor": "#E6E8EC",
        "flex": 1,
      }
    }
  >
    <Connect(CelebrateFeed)
      itemNamePressable={true}
      items={Array []}
      noHeader={true}
      organization={
        Object {
          "id": "orgId",
        }
      }
      refreshCallback={[Function]}
      refreshing={false}
    />
  </SafeAreaView>
</Component>
`;

exports[`should render items correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#006789"
    barStyle="dark-content"
    showHideTransition="fade"
  />
  <Header
    right={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "black",
          }
        }
        type="MissionHub"
      />
    }
    shadow={true}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      }
    }
    title="0 New Comments"
    titleStyle={
      Object {
        "color": undefined,
        "fontWeight": "400",
      }
    }
  />
  <SafeAreaView
    style={
      Object {
        "backgroundColor": "#E6E8EC",
        "flex": 1,
      }
    }
  >
    <Connect(CelebrateFeed)
      itemNamePressable={true}
      items={
        Array [
          Object {
            "date": "2018-06-11 00:00:00 UTC",
            "events": Array [
              Object {
                "celebrateable_type": "interaction",
                "changed_attribute_value": "2018-06-11 00:00:00 UTC",
                "id": "10",
              },
            ],
            "id": "1",
          },
          Object {
            "date": "2018-06-10 00:00:00 UTC",
            "events": Array [
              Object {
                "celebrateable_type": "accepted_challenge",
                "changed_attribute_value": "2018-06-10 00:00:00 UTC",
                "id": "20",
              },
            ],
            "id": "2",
          },
        ]
      }
      noHeader={true}
      organization={
        Object {
          "id": "orgId",
        }
      }
      refreshCallback={[Function]}
      refreshing={false}
    />
  </SafeAreaView>
</Component>
`;
